--- a/styles/Invoices.module.scss
+++ b/styles/Invoices.module.scss
@@ -2,6 +2,17 @@
 
 .root {
   width: 90%;
+  &_with_invoice_form {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .root {
+    &_with_invoice_form {
+      display: block;
+    }
+  }
 }
 
 @media screen and (min-width: 992px) {
